fixed some layout issues for the main burger image in the home page

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -57,7 +57,6 @@ html, body {
 }
 
 .menu ul {
-  border-top: 1px solid white;
   list-style: none;
   margin: 0;
   padding: 0;
